primera parte del html

--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -7,33 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pardosera</title>
     <link rel="stylesheet" href="../main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div id="inicio" class="contenedor">
-        <h1 class="h1-inicio">Artículos sublimados</h1>
-        <header id="inicio">
-            <img src="../assets/img/galeria/taza 1.PNG" alt="pardosera1" class="galeria">
-            <img src="../assets/img/galeria/logo.jpg" alt="logo" class="galeria logo">
-            <img src="../assets/img/galeria/taza 2.jpg" alt="pardosera2" class="galeria">
+    <div class="contenedor" id="inicio">
+
+        <header>
+            <img src="../assets/img/galeria/logo.jpg" alt="">
+            <h1>Artículos sublimados</h1>
         </header>
 
         <nav>
             <ul>
-                <li class="menu"><a href="../index.html" class="paginas">Inicio</a></li>
-                <li class="menu"><a href="productos.html" class="paginas">Productos</a></li>
-                <li class="menu"><a href="informacion-adicional.html" class="paginas">Información adicional</a></li>
-                <li class="menu"><a href="personalizados.html" class="paginas">Personalizados</a></li>
-                <li class="menu"><a href="preguntas-frecuentes.html" class="paginas">Consultas frecuentes</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="informacion-adicional.html">Información adicional</a></li>
+                <li><a href="personalizados.html">Personalizados</a></li>
+                <li><a href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
             </ul>
         </nav>
 
-        <main class="main-consultas">
-            <h2 class="titulo-consultas">Consultas frecuentes</h2>
-            <div class="consultas">
+        <main>
+            <h2>Consultas frecuentes</h2>
+            <div>
                 <div class="consultas2">
                     <p>¿Cuáles son las formas de pago? </p>
                     <p>Únicamente aceptamos pagos en efectivo y/o transferencia bancaria o depósito bancario.</p>
@@ -98,34 +94,30 @@
 
 
         <footer>
-            <div class="contacto1">
-                <h3 class="mapa">Visitanos</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9686427117763!2d-58.42960868565686!3d-34.57965998046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59ae587faaf%3A0x965823d3766b6a62!2sPalermo!5e0!3m2!1ses-419!2sar!4v1648751705188!5m2!1ses-419!2sar"
-                    width="150" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade" class="mapita"></iframe>
-            </div>
+            <h3>Visitanos</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9686427117763!2d-58.42960868565686!3d-34.57965998046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59ae587faaf%3A0x965823d3766b6a62!2sPalermo!5e0!3m2!1ses-419!2sar!4v1648751705188!5m2!1ses-419!2sar"
+                width="150" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="mapita">
+            </iframe>
 
-            <div class="contacto2" id="redes-footer">
-                <div class="redes">
-                    <h3 class="h3-redes">Contactanos</h3>
-                    <a href="mailto:pardoserasubli@gmail.com"><img src="../assets/img/icono-email.png" alt=""
-                            class="img-contacto"></a>
-                    <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../assets/img/icono-ws.png"
-                            alt="" class="img-contacto"></a>
-                </div>
+            <h3>Contactanos</h3>
+            <a href="mailto:pardoserasubli@gmail.com"><img src="../assets/img/icono-email.png" alt=""
+                    class="img-contacto"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../assets/img/icono-ws.png" alt=""
+                    class="img-contacto"></a>
 
-                <div class="redes">
-                    <h3 class="h3-redes">Seguinos</h3>
-                    <a href="https://facebook.com/pardosera/" target="_blank"><img
-                            src="../assets/img/icono-facebook.PNG" alt="" class="img-contacto"></a>
-                    <a href="https://twitter.com/?lang=es" target="_blank"><img src="../assets/img/icono-twitter.PNG"
-                            alt="" class="img-contacto"></a>
-                    <a href="https://www.instagram.com/pardosera/" target="_blank"><img
-                            src="../assets/img/icono-instagram.PNG" alt="" class="img-contacto"></a>
-                </div>
-            </div>
-            <a href="#inicio" class="subir">Subir</a>
+            <h3>Seguinos</h3>
+            <a href="https://facebook.com/pardosera/" target="_blank"><img src="../assets/img/icono-facebook.PNG" alt=""
+                    class="img-contacto"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../assets/img/icono-twitter.PNG" alt=""
+                    class="img-contacto"></a>
+            <a href="https://www.instagram.com/pardosera/" target="_blank"><img src="../assets/img/icono-instagram.PNG"
+                    alt="" class="img-contacto"></a>
+                    
+            <div>
+                <a href="#inicio">Entrega: Monzon Mauricio - Desarrollo Web</a>
+            </div>        
         </footer>
     </div>
 
