--- a/index.html
+++ b/index.html
@@ -10,22 +10,105 @@
 </head>
 
 <body>
-    <div class="contenedor">
+    <div class="contenedor" id="inicio">
 
         <header>
-
+            <img src="./assets/img/galeria/logo.jpg" alt="">
+            <h1>Artículos sublimados</h1>
         </header>
 
         <nav>
-
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="./pages/productos.html">Productos</a></li>
+                <li><a href="./pages/personalizados.html">Personalizados</a></li>
+                <li><a href="./pages/informacion-adicional.html">Información adicional</a></li>
+                <li><a href="./pages/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+            </ul>
         </nav>
 
         <main>
+            <h2>Información útil</h2>
+            <div>
+                <h3>¿Quiénes somos?</h3>
+                <p> Llevamos más de 15 años brindando soluciones en sublimación en gran formato, fabricación de
+                    banderas,
+                    impresión de prendas y publicidad textil en general. Desde nuestros inicios y hasta el día de
+                    hoy,
+                    estamos en la constante búsqueda de ofrecer un servicio superior. Para poder hacerlo nos
+                    apoyamos en
+                    pilares como la atención, la calidad final de los trabajos y la constante innovación
+                    tecnológica.
+                </p>
+            </div>
 
+            <div>
+                <h3>¿Qué es sublimación?</h3>
+                <p>La sublimación es un proceso químico que consiste en el cambio de estado solido a estado gaseoso
+                    sin
+                    pasar por el estado liquido.
+
+                    Ahora bien, en gráfica, cuando hablamos de sublimación nos referimos básicamente a una técnica
+                    que
+                    nos
+                    permite transferir una imagen impresa en un papel hacia otra superficie como por ejemplo una
+                    taza,
+                    una
+                    remera, una gorra, un rompecabezas, un reloj o cualquier otro producto rigido o textil que sea
+                    apto
+                    para
+                    sublimacion.
+                </p>
+            </div>
+            <div>
+
+                <h3>Sublimación en cerámica, plástico, cartón, madera, alminio</h3>
+                <p>Usando la sublimacion podes personalizar una gran cantidad de materiales rigidos como por
+                    ejemplo: ceramica, plastico, carton, madera, aluminio, etc. Pero esto solo es posible si el material
+                    o
+                    producto creado con ese material cumple con 4 requisitos.
+
+                    Los requisitos básicos para que un producto sea sublimable son:
+                </p>
+
+                <ul>
+                    <li>Estar polimerizados (es decir, estar recubiertos de polímero o resina de poliester).</li>
+                    <li>Debe poder ser expuestos a altas temperaturas durante cierto tiempo.</li>
+                    <li>Debe poder soportar cierta presion sin romperse o dañarse.</li>
+                    <li>Debe ser de color blanco o un color claro.</li>
+                </ul>
+                <p>En nuestra tienda vas a encontrar una gran cantidad de productos rigidos que ya estan listos para ser
+                    sublimados. Por ejemplo en nuestra productos vas a encontrar tazas de ceramica, mate y choops listas
+                    para sublimar.
+                </p>
+            </div>
         </main>
 
         <footer>
+            <h3>Visitanos</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9686427117763!2d-58.42960868565686!3d-34.57965998046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59ae587faaf%3A0x965823d3766b6a62!2sPalermo!5e0!3m2!1ses-419!2sar!4v1648751705188!5m2!1ses-419!2sar"
+                width="150" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="mapita">
+            </iframe>
 
+            <h3>Contactanos</h3>
+            <a href="mailto:pardoserasubli@gmail.com"><img src="./assets/img/icono-email.png" alt=""
+                    class="img-contacto"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="./assets/img/icono-ws.png" alt=""
+                    class="img-contacto"></a>
+
+            <h3>Seguinos</h3>
+            <a href="https://facebook.com/pardosera/" target="_blank"><img src="./assets/img/icono-facebook.PNG" alt=""
+                    class="img-contacto"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="./assets/img/icono-twitter.PNG" alt=""
+                    class="img-contacto"></a>
+            <a href="https://www.instagram.com/pardosera/" target="_blank"><img src="./assets/img/icono-instagram.PNG"
+                    alt="" class="img-contacto"></a>
+
+            <div>
+                <a href="#inicio">Entrega: Monzon Mauricio - Desarrollo Web</a>
+            </div>
         </footer>
 
     </div>
