empieza media query desktop

--- a/pages/informacion-adicional.html
+++ b/pages/informacion-adicional.html
@@ -32,8 +32,8 @@
 
         <main class="main-info-adic">
             <h2>Información adicional</h2>
-            <div>
-                <div>
+            <div class="videos">
+                <div class="caja-videos">
                     <h3>¿Cómo Sublimar una TAZA Recta?</h3>
                     <iframe width="300" height="200" src="https://www.youtube.com/embed/LT36qKtaR2c"
                         title="YouTube video player" frameborder="0"
@@ -41,7 +41,7 @@
                         allowfullscreen></iframe>
                 </div>
 
-                <div>
+                <div class="caja-videos">
                     <h3>¿Cómo sublimar un chop?</h3>
                     <iframe width="300" height="200" src="https://www.youtube.com/embed/t-79azMryls"
                         title="YouTube video player" frameborder="0"
@@ -49,7 +49,7 @@
                         allowfullscreen></iframe>
                 </div>
 
-                <div>
+                <div class="caja-videos">
                     <h3>¿Cómo sublimar una gorra?</h3>
                     <iframe width="300" height="200" src="https://www.youtube.com/embed/Is-PZTTatPo"
                         title="YouTube video player" frameborder="0"
@@ -57,7 +57,7 @@
                         allowfullscreen></iframe>
                 </div>
 
-                <div>
+                <div class="caja-videos">
                     <h3>¿Cómo sublimar remeras?</h3>
                     <iframe width="300" height="200" src="https://www.youtube.com/embed/BzarwgCKZOA"
                         title="YouTube video player" frameborder="0"
