--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -30,8 +30,8 @@
             </ul>
         </nav>
 
-        <main>
-            <h2>Consultas frecuentes</h2>
+        <main class="main-consultas">
+            <h2 class="h2-consultas">Consultas frecuentes</h2>
             <div>
                 <div class="consultas2">
                     <p>¿Cuáles son las formas de pago? </p>
