--- a/pages/productos.html
+++ b/pages/productos.html
@@ -36,7 +36,6 @@
                 <img src="../assets/img/productos/taza.jpg" alt="taza" class="producto">
 
                 <div>
-
                     <h4>TAZA CERÁMICA CÓNICA MEDIANA SUBLIMABLE</h4>
                     <p>
                         Área de impresión: 10 x 23 cm
@@ -52,8 +51,8 @@
 
             <div class="art">
                 <img src="../assets/img/productos/mate.jpg" alt="mate" class="producto">
-                <div class="producto descripcion-p">
 
+                <div>
                     <h4>MATE CHICO CERÁMICA SUBLIMABLE</h4>
                     <p>
                         Dimensiones: 9 cm de alto por 8 cm de diámetro
@@ -68,10 +67,9 @@
             </div>
 
             <div class="art">
-                <img src="../assets/img/productos/choop.jpg" alt="choop" class="producto">
+                <img src="../assets/img/productos/choop.jpg" alt="chop" class="producto">
 
-                <div class="producto descripcion-p">
-
+                <div>
                     <h4>CHOPP CERÁMICA SUBLIMABLE</h4>
                     <p>
                         Área de impresión: 10 x 23 cm
@@ -82,7 +80,6 @@
                     <p>
                         Precio $496.10
                     </p>
-
                 </div>
             </div>
 
