--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -112,7 +112,7 @@
                 <h3>Contactanos</h3>
                 <a href="mailto:pardoserasubli@gmail.com"><img src="../assets/img/icono-email.png" alt=""
                         class="img-contacto"></a>
-                <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../assets/img/icono-ws.png" alt=""
+                <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../assets/img/icono-ws.PNG" alt=""
                         class="img-contacto"></a>
 
             </div>
@@ -121,7 +121,7 @@
             <div class="red-contacto">
 
                 <h3>Seguinos</h3>
-                <a href="https://facebook.com/pardosera/" target="_blank"><img src="../assets/img/icono-facebook.PNG"
+                <a href="https://facebook.com/pardosera/" target="_blank"><img src="../assets/img/icono-facebook.png"
                         alt="" class="img-contacto"></a>
                 <a href="https://twitter.com/?lang=es" target="_blank"><img src="../assets/img/icono-twitter.PNG" alt=""
                         class="img-contacto"></a>
